Add viewport meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Country</title>
   <meta name="description" content="Country.is is a tiny HTTP service that looks up a client in a GeoIP database and returns its country in JSON format.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style type="text/css">
     body {
       margin-top: 20%;
