--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
       background: #464545;
       text-align: center;
     }
+    img { width: 256px; }
   </style>
 </head>
 <body>
   <header>
     <a href="https://github.com/outofprint/country">
-      <img class="logo" alt="logo" src="images/location.png">
+      <img alt="globe" src="images/globe.png">
     </a>
     <h1>country.is</h1>
   </header>
