--- a/index.html
+++ b/index.html
@@ -2,34 +2,96 @@
 <html>
 <head>
   <title>Country</title>
-  <meta name="description" content="Country.is is a tiny HTTP service that looks up a client in a GeoIP database and returns its country in JSON format.">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Country is an open-source geolocation API that returns the country of the querying web browser in JSON format.">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <style type="text/css">
     body {
-      margin-top: 20%;
+      background: #575656;
       color: #fff;
-      background: #464545;
+      font: 15px/1.5 'Open Sans', sans-serif;
+    }
+
+    .wrapper {
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 15px;
       text-align: center;
     }
-    img { width: 256px; }
+
+    h1,
+    h2 {
+      text-align: center;
+    }
+
+    h1 {
+      margin-top: 0;
+    }
+
+    h2 {
+      font-weight: 300;
+    }
+
+    pre {
+      margin: 40px 0 20px 0;
+    }
+
+    code {
+      text-align: left;
+    }
+
+    code:hover {
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <header>
-    <a href="https://github.com/outofprint/country">
-      <img alt="globe" src="images/globe.png">
-    </a>
-    <h1>country.is</h1>
-  </header>
-  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <div class="wrapper">
+    <header>
+      <h1>Country.is</h1>
+      <h2>
+        <strong>Country.is</strong> is an open-source geolocation API that returns the country of the querying web browser in JSON format.
+      </h2>
+    </header>
+    <!--googleoff: all-->
+    <pre><code>var demo = function(data) {
+  alert(JSON.stringify(data))
+}
+
+$.getJSON("http://api.country.is", demo)</code></pre>
+    <!--googleon: all-->
+    <iframe src="https://ghbtns.com/github-btn.html?user=hakanensari&repo=country&type=star&count=true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+  </div>
+  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <link rel="stylesheet" href="css/zenburn.css">
+  <script src="js/highlight.pack.js"></script>
   <script>
-    $.getJSON( "//api.country.is?callback=?")
-      .done(function(data) {
-        $("h1").html('{"country":"' + data.country + '"}');
+    hljs.initHighlightingOnLoad()
+    $('code').each(function() {
+      var $this = $(this)
+      $this.click(function() {
+        new Function(
+          $this.text()
+        )()
       })
-      .fail(function() {
-        $("h1").html('{"error":"not found"}');
-      });
+    })
+
+    var $wrapper = $(".wrapper")
+    var height = $(window).height() - $wrapper.outerHeight(true)
+    if (height > 0) {
+      $wrapper.css({"margin-top": height / 2.2})
+    }
+  </script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga')
+
+    ga('create', 'UA-71080265-1', 'auto')
+    ga('send', 'pageview')
   </script>
 </body>
 </html>
