--- a/index.html
+++ b/index.html
@@ -1,44 +1,48 @@
 <!doctype html>
 <html>
 <head>
-  <title>Country</title>
+  <title>Country.is</title>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Country is an open-source geolocation API that returns the country of the querying web browser in JSON format.">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <meta name="description" content="Country.is tells your browser which country it's in. It uses IP geolocation, so there's no disruptive prompt.">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/vs2015.css">
   <style type="text/css">
+    body,
+    html {
+      height: 100%;
+    }
+
     body {
-      background: #575656;
-      color: #fff;
-      font: 15px/1.5 'Open Sans', sans-serif;
+      align-items: center;
+      background: #24384b;
+      display: flex;
+      justify-content: center;
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
     }
 
     .wrapper {
-      max-width: 500px;
-      margin: 0 auto;
-      padding: 15px;
+      max-width: 600px;
       text-align: center;
     }
 
-    h1,
-    h2 {
-      text-align: center;
+    p {
+      color: #d1d4cc;
+      font-size: x-large;
     }
 
-    h1 {
-      margin-top: 0;
+    a {
+      color: #d1d4cc;
     }
 
-    h2 {
-      font-weight: 300;
-    }
-
-    pre {
-      margin: 40px 0 20px 0;
+    strong {
+      color: #fff;
     }
 
     code {
+      line-height: 1.3;
+      padding: 30px !important;
       text-align: left;
     }
 
@@ -49,40 +53,32 @@
 </head>
 <body>
   <div class="wrapper">
-    <header>
-      <h1>Country.is</h1>
-      <h2>
-        <strong>Country.is</strong> is an open-source geolocation API that returns the country of the querying web browser in JSON format.
-      </h2>
-    </header>
-    <!--googleoff: all-->
-    <pre><code>var demo = function(data) {
-  alert(JSON.stringify(data))
-}
+    <p>
+      <strong>Country.is</strong> is a minimal API that tells your browser which country it is in. It uses IP geolocation with <a href="http://www.maxmind.com">GeoLite2 data</a> created by MaxMind, so there's no disruptive prompt.
+    </p>
+    <p>
+      Click below for a demo.
+    </p>
 
-$.getJSON("http://api.country.is", demo)</code></pre>
-    <!--googleon: all-->
+    <pre>
+      <code>fetch('https://api.country.is')
+  .then((resp) => resp.json())
+  .then((data) => alert(JSON.stringify(data)));</code>
+    </pre>
+
     <iframe src="https://ghbtns.com/github-btn.html?user=hakanensari&repo=country&type=star&count=true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+
   </div>
-  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <link rel="stylesheet" href="css/zenburn.css">
+
   <script src="js/highlight.pack.js"></script>
   <script>
     hljs.initHighlightingOnLoad()
-    $('code').each(function() {
-      var $this = $(this)
-      $this.click(function() {
-        new Function(
-          $this.text()
-        )()
-      })
-    })
-
-    var $wrapper = $(".wrapper")
-    var height = $(window).height() - $wrapper.outerHeight(true)
-    if (height > 0) {
-      $wrapper.css({"margin-top": height / 2.2})
-    }
+    document.querySelectorAll('code').forEach(
+      function(element) {
+        let code = element.innerHTML.replace(/&gt;/g, '>')
+        element.onclick = function() { new Function(code)() }
+      }
+    )
   </script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
